<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Clubs">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:background="@drawable/background2"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ie"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/ie"
                    android:onClick="clubEvent"
                    android:tag="ie"
                    app:srcCompat="@drawable/ie" />

                <ImageView
                    android:id="@+id/ieee"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/ieee"
                    android:onClick="clubEvent"
                    android:tag="ieee"
                    app:srcCompat="@drawable/ieee" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/acm"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/acm"
                    android:onClick="clubEvent"
                    android:tag="acm"
                    app:srcCompat="@drawable/acm" />

                <ImageView
                    android:id="@+id/rotaract"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/rotaract"
                    android:onClick="clubEvent"
                    android:tag="rotaract"
                    app:srcCompat="@drawable/rotaract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iste"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/iste"
                    android:onClick="clubEvent"
                    android:tag="iste"
                    app:srcCompat="@drawable/iste" />

                <ImageView
                    android:id="@+id/iet"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/iet"
                    android:onClick="clubEvent"
                    android:tag="iet"
                    app:srcCompat="@drawable/iet" />
            </LinearLayout>

            <Button
                android:id="@+id/addEvent"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/component2" />

            <ImageView
                android:id="@+id/margin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/margin"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>