<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Form">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/clubInfoLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/clublogo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/enter_event_details"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="14dp"

                android:layout_marginRight="55dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="Event Name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/eDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="Event Date"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/eTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="Event Time"
                android:inputType="time"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/eDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Event Details"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/submit"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/component3"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>